Refactor MCP server import service tests to use new transformation method and update status constants
- Updated `McpServerImportServiceTest` to replace deprecated transformation method with `adaptExternalDataToNacosMcpServerFormat`.
- Adjusted mock setups and assertions in tests to align with new transformation logic.
- Introduced `McpServerStatusEnum` to centralize server status constants and updated `AiConstants` to reference these enums.
- Enhanced `McpServerImportResponse` to initialize counts to zero by default.
- Added unit tests for `McpServerStatusEnum` and enhanced fields in `McpServerBasicInfo`.
- Updated `NacosMcpRegistryServerDetailTest` to improve serialization tests and removed unnecessary assertions.